split css and js entry

--- a/add.html
+++ b/add.html
@@ -3,7 +3,8 @@
   <head>
     <title>CRUD Example--Add</title>
     <!-- Author: Song -->
-     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <script src="/static/bootstrapCssWrapper-bundle.js"></script>
   </head>
   <body>
     <div id="root">
