--- a/edit.html
+++ b/edit.html
@@ -3,6 +3,7 @@
   <head>
     <title>CRUD Example--Edit</title>
      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <script src="/static/bootstrapCssWrapper-bundle.js"></script>
     <!-- Author: Song -->
   </head>
   <body>
